--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "laravelarab/tarjama",
+  "name": "ncdev/tarjama",
   "description": "It's a laravel model columns translation manager",
   "license": "MIT",
   "keywords": [
@@ -17,16 +17,14 @@
   "authors": [
     {
       "name": "Abdellah Chadidi",
-      "email": "chadidi97@gmail.com",
-      "homepage": "https://chadidi.dev",
-      "role": "Developer"
+      "email": "chadidi97@gmail.com"
     }
   ],
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
     "php": ">=5.6.4",
-    "illuminate/support": "~5.4.0|~5.5.0|~5.6.0"
+    "illuminate/support": "5.*|6.*|7.*"
   },
   "require-dev": {
     "orchestra/testbench": "~3.4.0|~3.5.0|~3.6.0",
